Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION pre-2.1.9:
============================

 Jose Kahan (Aug  4, 2003)
  - As a side effect of PNK's use of an SGML entity for the @ char, the 
    mailcommand option stopped working on all the headers except for
    the To: one.

 Jose Kahan (Aug  1, 2003)
  - In order to guarantee the validity of XHTML documents, changed the
    behavior of hypermail when including customized footers. Previously,
    when using this option, the custom markup had to include the </body>
    and </html> end tags. As we also need to include a </div> in some
    cases for XHTML and it's much harder to guess when to add it, I
    made hypermail always add those three end tags as needed, regardless
    of whether the custom footer option is being used. 

 Jose Kahan (Jul 30, 2003)
  - After talking with Dom Hazel-Massieux, I added some extra WAI enhancements
    to the list of indexes generated by hypermai. Specifically, the date
    is shown in a verbose name in the title attribute of each entry and in 
    an abbreviated version in the markup that's being displayed.

 Jose Kahan (Jul 30, 2003)
  - When rebuilding an archive, the attachment files were not being overwritten
    correctly. . Fixed this by adding an O_TRUNC flag.

 Jose Kahan (Jul 29, 2003)
  - Removed a memory leak in file.c as reported by insure.
  - The ietf-mbox option didn't work on "quoted printable" encoded attachments.    

 Peter McCluskey (July 22, 2003)
   Fix show_msg_links = 3 option (Jose's changes assumed it didn't exist).
   Updates to German from Tobias Weber.

 Kent Landfield (Jul 14, 2003)
   - When show_headers was used in print.c, the newline was not recognized
     early enough in printheaders. A check was added to assure the newline 
     was recognized properly.

 Kent Landfield (Jul 10, 2003)
  - Small typo in print.c corrected.
       fprintf(fp, "%s ^lt;<em>%s</em>&gt;"...
